public/lite/api/en/r1.7/_sources/generate/file_include_core_utils_log_adapter.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_core_utils_log_adapter.h:

File log_adapter.h
==================

|exhale_lsh| :ref:`Parent directory <dir_include_core_utils>` (``include/core/utils``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/core/utils/log_adapter.h``)
-------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_core_utils_log_adapter.h.rst





Includes
--------


- ``./securec.h``

- ``functional``

- ``map`` (:ref:`file_include_core_ops_data_format_dim_map.h`)

- ``memory``

- ``sstream``

- ``stdarg.h``

- ``stdint.h``

- ``string``

- ``thread``

- ``toolchain/slog.h``

- ``utils/overload.h`` (:ref:`file_include_core_utils_overload.h`)

- ``utils/visible.h`` (:ref:`file_include_core_utils_visible.h`)

- ``vector``



Included By
-----------


- :ref:`file_include_core_abstract_abstract_value.h`

- :ref:`file_include_core_abstract_dshape.h`

- :ref:`file_include_core_base_base.h`

- :ref:`file_include_core_ir_tensor.h`

- :ref:`file_include_core_utils_any.h`

- :ref:`file_include_core_utils_check_convert_utils.h`

- :ref:`file_include_core_utils_convert_utils_base.h`

- :ref:`file_include_core_utils_misc.h`




Namespaces
----------


- :ref:`namespace_mindspore`


Classes
-------


- :ref:`exhale_struct_structmindspore_LocationInfo`

- :ref:`exhale_class_classmindspore_LogStream`

- :ref:`exhale_class_classmindspore_LogWriter`

- :ref:`exhale_class_classmindspore_TryCatchGuard`


Enums
-----


- :ref:`exhale_enum_mindspore_ExceptionType-1`

- :ref:`exhale_enum_mindspore_MsLogLevel-1`

- :ref:`exhale_enum_mindspore_SubModuleId-1`


Functions
---------


- :ref:`exhale_function_log_adapter.h_GetRelPathPos-1`

- :ref:`exhale_function_mindspore_GetSubModuleName-1`

- :ref:`exhale_function_mindspore_GetTimeString-1`

- :ref:`exhale_function_mindspore_InitSubModulesLogLevel-1`

- :ref:`exhale_function_mindspore_IS_OUTPUT_ON-1`


Defines
-------


- :ref:`exhale_define_log_adapter.h_FILE_NAME-1`

- :ref:`exhale_define_log_adapter.h_LOG_HDR_FILE_REL_PATH-1`

- :ref:`exhale_define_log_adapter.h_MS_ASSERT-1`

- :ref:`exhale_define_log_adapter.h_MS_ERROR_IF_NULL-1`

- :ref:`exhale_define_log_adapter.h_MS_ERROR_IF_NULL_W_RET_VAL-1`

- :ref:`exhale_define_log_adapter.h_MS_ERROR_IF_NULL_WO_RET_VAL-1`

- :ref:`exhale_define_log_adapter.h_MS_EXCEPTION-1`

- :ref:`exhale_define_log_adapter.h_MS_EXCEPTION_IF_CHECK_FAIL-1`

- :ref:`exhale_define_log_adapter.h_MS_EXCEPTION_IF_NULL-1`

- :ref:`exhale_define_log_adapter.h_MS_EXCEPTION_IF_ZERO-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG_DEBUG-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG_ERROR-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG_EXCEPTION-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG_INFO-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG_TRY_CATCH_SCOPE-1`

- :ref:`exhale_define_log_adapter.h_MS_LOG_WARNING-1`

- :ref:`exhale_define_log_adapter.h_MSLOG_IF-1`

- :ref:`exhale_define_log_adapter.h_MSLOG_THROW-1`

- :ref:`exhale_define_log_adapter.h_RETURN_IF_FALSE-1`

- :ref:`exhale_define_log_adapter.h_RETURN_IF_FALSE_WITH_LOG-1`

- :ref:`exhale_define_log_adapter.h_SUBMODULE_ID-1`


Variables
---------


- :ref:`exhale_variable_mindspore_acl_handle_map-1`

- :ref:`exhale_variable_mindspore_exception_types-1`

- :ref:`exhale_variable_mindspore_exception_types_map-1`

- :ref:`exhale_variable_mindspore_g_ms_submodule_log_levels-1`

- :ref:`exhale_variable_mindspore_this_thread_max_log_level-1`

